# Lexiform

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  COMPILER_STAGES.md  CONTRIBUTING.md  FRONTEND_ARCHITECTURE.md  README.md  WASM_GUIDE.md  formscript-roadmap.md  lexiform-roadmap.md  package-lock.json  package.json
docs/: LANGUAGE_REFERENCE.md  TEAM_REFLECTION.md
examples/react-vite/: FormRenderer.tsx  contact.form  index.html  lexiform-env.d.ts  main.tsx  package.json
examples/youtube-upload/: App.css  App.tsx  index.html  lexiform-env.d.ts  package.json  youtube_upload.form
frontend/: package.json  tsconfig.app.json
frontend/src/: App.css  App.tsx  CompilerStages.css  CompilerStages.tsx  form-schema.json  index.css
include/: AST.hpp  IRGenerator.hpp  Lexer.hpp  Optimizer.hpp  Parser.hpp  SemanticAnalyzer.hpp
src/: AST.cpp  IRGenerator.cpp  Lexer.cpp  Optimizer.cpp  Parser.cpp  SemanticAnalyzer.cpp  WasmBindings.cpp  main.cpp
tests/: test_runner.js
tests/scenarios/: contact_simple.form  error_semantic.form  optimization_demo.form  survey_complex.form
